objects/AssociatedLocation/AssociatedLocation.object-meta.xml
<CustomObject>
	<historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>2</archiveRetentionYears>
        <description>HIPAA Audit Log Retention Associated Location</description>
        <gracePeriodDays>0</gracePeriodDays>
    </historyRetentionPolicy>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>