objects/AssociatedLocation/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Formula field for address related to location object.</description>
    <formula>IF(ISBLANK(Location.AddressLine2__c),
Location.AddressLine1__c  + &quot;, &quot; + Location.City__c  + &quot;, &quot; +  Text(Location.State__c ) + &quot;, &quot; +  Text(Location.Country__c)  + &quot;, &quot; + Location.PostalCode__c,
Location.AddressLine1__c  + &quot;, &quot; +  Location.AddressLine2__c  + &quot;, &quot; +  Location.City__c  + &quot;, &quot; +  Text(Location.State__c ) + &quot;, &quot; +  Text(Location.Country__c)  + &quot;, &quot; + Location.PostalCode__c)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>