objects/AssociatedLocation/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Associated Locations</relationshipLabel>
    <relationshipName>Associated_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>