objects/AssociatedLocation/fields/IsVisibleOnPatientCard__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleOnPatientCard__c</fullName>
    <description>The field is being referenced in Patient Cared configuration record named Address.</description>
    <formula>ISPICKVAL(Type, &#39;Patient&#39;)</formula>
    <label>IsVisibleOnPatientCard</label>
    <type>Checkbox</type>
</CustomField>